--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
-    "babel-jest": "^29.3.1",
+    "babel-jest": "^29.4.1",
     "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
-    "eslint": "^8.32.0",
+    "eslint": "^8.33.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.3.1",
+    "jest": "^29.4.1",
     "mini-css-extract-plugin": "^2.7.2",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
